# awesome-panel

./: .bokeh  .gitignore  .isort.cfg  .nojekyll  .pylintrc  .readthedocs.yaml  CNAME  DEVELOPER_GUIDE.md  LICENSE  MANIFEST.in  README.md  Untitled.ipynb  _quarto.css  about.html  app.ipynb  app.py  app_debug_vscode.py  code-of-conduct.md  contributing.md  designer_dev.py  doc8.ini  index.html  index.py  index.ts  index.xml  isort.cfg  listings.json  log.txt  mypy.ini  out.txt  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_base.txt  requirements_docs.txt  requirements_local.txt  robots.txt  script.py  (+7 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: tests.yaml
application/: __init__.py  template.py  utils.py
application/config/: __init__.py  _authors.py  _site.py  application.py  authors.py  menu_items.py  pages.py  resources.py  settings.py  social_links.py  source_links.py  tags.py  templates.py  themes.py
application/pages/: __init__.py  holoviews_linked_brushing.py  issue_graph.py  ngl_molecule_viewer.py  ngl_protein_viewer.py  panel_component_explorer.py  relations.json
application/shared/: logger.py
application/template/: __init__.py  all.css  all_dark.css  all_default.css  bootstrap.css  links.html  material.js  settings.py  template.py  template_settings.py  test_init.py
apps/: index.html  index.js
assets/js/: awesome-panel.min.js  mwc.bundled.js  mwc.readme.md
awesome_panel/: jsme_editory.py
awesome_panel/apps/: about.py  awesome_button.py  awesome_list.py  bootstrap_dashboard.py  component_explorer.py  custom_bokeh_model.py  dash_iris_classifier.py  dependent_widgets.py  detr.py  echarts.py  fast_grid_template.py  fileinput_area.py  gallery.py  getting_started_hvplot_interactive.ipynb  getting_started_panel.ipynb  highcharts_network.py  holoviews_linked_brushing.py  image_classifier.py  jsme_editor.py  kickstarter_dashboard.py  lib_altair.py  lib_bokeh.py  lib_datashader.py  lib_deckgl.py  lib_holoviews.py  lib_hvplot.py  lib_ipysheet.py  lib_matplotlib.py  lib_plotly.py  lib_plotnine.py  lib_pydeck.py  lib_pyecharts.py  lib_pyvista.py  lib_vega.py  lib_vtk.py  loading_spinners.py  loading_spinners_config.py  mercury_buy_vs_build.py  model_viewer.py  ngl_viewer.py  (+11 more)
awesome_panel/assets/: svg.py
awesome_panel/config/: __init__.py
commuting_flows_italy/: index.html
devops/azure-pipelines/: build.base.yml  build.prod.yml
devops/docker/: Dockerfile.base  Dockerfile.prod  Dockerfile.test
docs/: _quarto.css  _quarto.yml  about.qmd  awesome-list.md  conf.py  custom_models.md  index.qmd  index.rst  performance.md  prebuilt_bokeh_model_extensions.md  vscode.md
docs/_copy_of_project_root/: README.md  code-of-conduct.md  contributing.md
docs/awesome_panel/: awesome_panel.core.rst  awesome_panel.database.rst  awesome_panel.express.assets.rst  awesome_panel.express.bootstrap.cards.rst  awesome_panel.express.bootstrap.rst  awesome_panel.express.fontawesome.rst  awesome_panel.express.rst  awesome_panel.express.templates.bootstrap_dashboard.rst  awesome_panel.express.templates.rst  awesome_panel.express.testing.rst  awesome_panel.express.widgets.rst  awesome_panel.rst  awesome_panel.shared.rst  modules.rst
examples/: async_tasks.py  awesome_list.py  bootstrap_alerts.py  bootstrap_dashboard.py  caching_example.py  classic_dashboard.py  commuting_flows_italy.py  component_explorer.py  crossfiltering_holoviews_bokeh.py  crossfiltering_holoviews_plotly.py  dash_iris_classifier.py  data_explorer_loading.py  dependent_widgets.py  detr.py  echarts.py  fast_grid_template.py  gallery.py  getting_started_hvplot_interactive.ipynb  getting_started_panel.ipynb  google_map_viewer.py  highcharts_renewable_power_plants_dk.py  holoviews_linked_brushing.py  image_classifier.py  iris_classifier.py  jsme_editor.py  kickstarter_dashboard.py  lib_folium.py  lib_holoviews.py  lib_matplotlib.py  lib_plotly.py  lib_plotnine.py  lib_pydeck.py  lib_pyecharts.py  loading_spinners.py  lonboard_dashboard.py  mapwidget_cesium.py  pandas_profiling_app.py  param_reference.py  perspective.py  py3dmol.py  (+13 more)
examples/detr_utils/: model.py
gallery/: app_dev.ipynb  requirements.txt
gallery/awesome_panel_express_tests/: test_fontawesome.py  test_gallery.py  test_markdown.py  test_spinners.py
gallery/awesome_panel_tests/: test_gallery.py  test_loading_io.py  test_spinners.py
gallery/bootstrap_dashboard/: __init__.py  about.md  app.py  limitations.md  main.py  services.py  template_bootstrap.py  views.py
gallery/bootstrap_dashboard2_.py/: main.py
mapwidget_dashboard/: index.html
package/: Manifest.in  README.md  setup.py
package/awesome_panel/: .bokeh  index.ts  package-lock.json  package.json  tsconfig.json
package/tests/: conftest.py  test.py  test_bootstrap.py  (+14 more)
performance/: locust_e2e.py
scripts/: Untitled.ipynb  Untitled1.ipynb  app.py  app_ideas.md  bokeh.html  comparison.py  demo.html  disable_button.py  discourse1265.py  discourse1279.ipynb  discourse_1244_replacing_options.py  discourse_1255_dropzonejs.html  discourse_1255_dropzonejs.py  discourse_1260.py  discourse_1286.py  discourse_1291.py  discourse_1315.py  discourse_1329.py  discourse_1331.py  discourse_1360_plotly_clickevents.py  discourse_1374.ipynb  discourse_1374.py  discourse_1583_interative.py  discourse_1597_fileselector.py  discourse_1598.py  discourse_1609_player_widget.py  discourse_1652.py  discourse_1739.py  discourse_744.py  discourse_988_share_object.py  dynamic_map.py  echarts_not_stretching.py  example_template.py  extract_resources_markdown.py  fast_resources_converter.py  fast_stream.json  fontawesome.py  functional_approach.py  generate_applications.py  hello_panel_world.py  (+87 more)
src/: site.py
static/: awesome-panel.js
tasks/: __init__.py  docker.py  jupyter.py  package.py  panel.py  sphinx.py  test.py
test_results/: mypy-results-api.xml  test-results-docs.xml  test-results.xml
tests/: my_app.py  test_dashboard.py  test_fontawesome.py  test_platform.py  test_urls.py
trading_analytics/: pyvenv.cfg
(+765 files in other folders)
